Remove `name` field from VotingRequest